<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <ImageView
                android:id="@+id/img_item_stadion"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/img_item_photo"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                tools:ignore="ContentDescription"
                android:layout_marginStart="16dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/klub_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#000000"/>
        </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tv_item_detail"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/didirikan"
                    android:layout_marginStart="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/tv_item_didirikan"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginStart="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/pelatih"
                    android:layout_marginStart="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/tv_item_pelatih"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/basis_klub"
                    android:layout_marginStart="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/tv_item_basis"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginStart="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/stadion"
                    android:layout_marginStart="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/tv_item_stadion"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>